# conlex

./: .gitignore  README.md  pyproject.toml
scripts/: analyse_contracts.py
src/conlex/io/: loader.py
src/conlex/llm/: prompts.py  reflexion.py  synthesizer.py
src/contract_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: engine.py  prompts.py  reflexion.py
src/utils/: chunk.py
